Closed Bug 350495 Opened 18 years ago Closed 18 years ago

Crashes [@ nsFormFillController::SetPopupOpen]

Categories

(Toolkit :: Autocomplete, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: smaug, Assigned: smaug)

References

Details

(Keywords: fixed1.8.1, topcrash)

Crash Data

Attachments

(1 file)

According to TB there are quite a few crashes @ http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/toolkit/components/satchel/src/nsFormFillController.cpp&mark=253&rev=MOZILLA_1_8_BRANCH#253
If the document is being destroyed, docshell may be null.
This should be ok.
Attachment #235782 - Flags: review?
Attachment #235782 - Flags: review? → review?(michael.wu)
Component: Form Manager → Autocomplete
Flags: review?(michael.wu)
Product: Firefox → Toolkit
Comment on attachment 235782 [details] [diff] [review]
Adding null checks

ugh, bugzilla doesn't like product/component changes
Attachment #235782 - Flags: first-review?(michael.wu)
This should go to 1.8.1 too.
Comment on attachment 235782 [details] [diff] [review]
Adding null checks

So apparently we can have this function called as the docshell is getting destroyed. Smaug thinks it may be caused by a timer. At any rate, I wonder if the presentation shell can be null when the docshell isn't, and if we really want to spit out another warning on the console if docshell ends up null.
Attachment #235782 - Flags: first-review?(michael.wu) → first-review?(jst)
nsDocShell::GetPresShell may return null presshell.
(It is after all *Get*PresShell)
Comment on attachment 235782 [details] [diff] [review]
Adding null checks

r=jst
Attachment #235782 - Flags: first-review?(jst) → first-review+
Comment on attachment 235782 [details] [diff] [review]
Adding null checks

Checked in to trunk.
Since the same crash may happen un 1.8.1. (but not in 1.8.0) asking for approval.
Attachment #235782 - Flags: approval1.8.1?
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [baking until 8/30]
Comment on attachment 235782 [details] [diff] [review]
Adding null checks

a=beltzner on behalf of 181drivers
Attachment #235782 - Flags: approval1.8.1? → approval1.8.1+
Keywords: fixed1.8.1
Whiteboard: [baking until 8/30]
Severity: normal → critical
Keywords: topcrash
Crash Signature: [@ nsFormFillController::SetPopupOpen]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: