Bug 350495, Crashes [@ nsFormFillController::SetPopupOpen], r=jst